--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>Example of Play | 地城世界 HTML SRD</title>
+  <title>遊玩範例 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -110,41 +110,42 @@
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
              
-<h1>Example of Play</h1>
-<p class="NoIndent">I’m GMing a game with Isaac (playing Omar), Ben (playing Brianne), Amy (playing Nora), and Dan (playing Rath). The group has come upon a tribe of goblins preparing the ritual sacrifice of a rare and valuable albino crocodile (highly regarded as pets among the wealthy of the city).</p>
-<p>Three of the goblin warriors—drugged on narcotic vapors—charge the fighter Brianne, shrieking. Two others take cover, prepare their bows and gesture urgently toward Rath, as they make signs to ward off the evil eye. Another group of three slips into the shadows around the outer edge of the chamber, preparing a sneak attack. The high priest and her acolyte carry on with the ritual, rubbing the croc’s upturned belly to keep it compliant, and bringing out the sacred knife to slit its throat.</p>
-<p>Once I describe the situation I make sure the game’s a conversation by giving them a chance to do something: “So, what do you do?”</p>
-<p>Isaac jumps into the action first. “There’s enough shadows at the edges of the chamber to hide in?” “Yeah,” I say, “the goblins aren’t much for lighting apparently. The edges of the chamber just kind of disappear into crumbling walls, rubble, and gloom.” “Great! I’m going over here, the side where the sneaky ones went. Omar glances over his shoulders, pulls up his hood over his head, and ducks into the shadows. I’m going to pop out of the shadows right here, where the torches illuminate the sacrificial altar.”</p>
-<p>I look over the map and say “Well, there’s certainly a danger of being discovered that I think you’re defying. Sounds like Dex to me, since you’re moving carefully and silently,” so he picks up the dice and rolls. The dice show 1 and 2, plus his Dex of 2 is only 5. “Damn!” he says.</p>
-<p>I already have an idea of what to do, but I check it against my list of moves to be sure. Sure enough, my idea to have him get his foot lodged in the rubble in the darkness is a move, “put someone in a spot.” “As you make your way through the shadows, you put your foot down on some rubble and it shifts under you, pinning your foot. What’s worse, you hear a deep raspy breath as the shifting rubble awakes something in the shadows. Are you giving away your position to cry for help or trying to get out yourself?”</p>
-<p>“Um, I’m not sure.”</p>
-<p>“That’s fine, we’ll come back to you. What are the rest of you doing?”</p>
-<p>Dan steps up. “Those goblins that ducked into the shadows? Can I see them?” “Not at first glance. Are you trying to pick them out?” “No, I’m just wondering if they’ll be targets for my sleep spell. I push the winds of magic into a lulling summer breeze that fills the room.”</p>
-<p>Dan rolls his cast a spell move to cast Sleep. He rolls 6 total on the dice, and he has +2 Int, for a total of 8. He has a choice to make. “You can feel the spell slipping away from you, the winds of magic are already all caught up in the goblin’s ritual sacrifice. There are some options on the move, which one are you taking to keep the spell?”</p>
-<p>Dan ponders his options. “I may need to put more of these guys to sleep. Brianne, can you cover me if I get in trouble or should I take the -1 forward?”</p>
-<p>“Sure, I can cover you,” Ben says.</p>
-<p>“Okay, I’ll take the danger option.”</p>
-<p>“Great,” I say. “The narcotic vapors those goblins are on? It attunes their senses: They can feel the winds of magic just a bit, and now they’re all running at you instead of Brianne. How many creatures are you putting to sleep?”</p>
-<p>Dan rolls the die. “Looks like only 1, damn.”</p>
-<p>“Right in the middle of some long goblin invocation the priest just drops to the floor. Her acolyte immediately starts shaking her to wake her up. Neither of them is paying much attention to the albino crocodile, which is no longer content since no one is rubbing its belly. The goblins on the fumes, though, they’re coming right at Rath.”</p>
-<p>Ben jumps in. “I step between Rath and the crazed goblins and make myself a big target, drawing the goblin’s attention with a yell.”</p>
-<p>“Sounds like defend,” I say.</p>
-<p>“Okay, I rolled a 7, so I hold 1.”</p>
-<p>“Great. The three goblins on fumes practically bowl Rath over as they slam into him, swinging their daggers wildly.”</p>
-<p>“No they don’t!” Ben says. “I spend my hold to get into the way and direct the attack to me.”</p>
-<p>“So Brianne steps in at the last moment, pushes Rath out of the way, and the goblins lay into her instead. Looks like 5 damage. Nora, Brianne’s got these three psychotic goblins all over her, Rath’s just put the priestess to sleep, the crocodile’s stirring, and Omar’s nowhere to be found. What are you doing?”</p>
-<p>“First I line up a shot on one of the archer goblins, and while I’m doing that I give a little head nod and Canto heads off into the shadows, he’s trained to hunt, he’s looking for Omar to make sure he’s all right.”</p>
-<p>I look over the ranger’s command move, to make sure I know what the effects of Canto’s search are, before responding. “Well, on his own Canto will probably find Omar in a while. If you go into the darkness with him you’ll take his bonus to your discern realities roll to find Omar. But first it sounds like you’re making a called shot?”</p>
-<p>“Oh, the goblin archers are surprised by me? I thought I was just volleying,” Amy replies.</p>
-<p>It’s time for me to make a call. “No, they’re entirely focused on Rath, they’re about to fire on him. I think you’ve got the element of surprise because they’re just too focused.”</p>
-<p>“Great! Then I’ll go ahead and take a shot at the arms of the one closest to me, I want him to drop his bow. Looks like that’s +Dex… 10! He drops his bow and takes 4 damage.”</p>
-<p>I consult the goblin’s stats first, then reply “Yup, that’ll kill him. And since you hit him dead in the arm, he doesn’t get a shot off. The other one, however, releases his shot at Rath, for 2 damage. Rath, Brianne pushes you out of the way and you think you’re safe for a split second before an arrow flies into your leg, what are you doing about it? Actually, hold that thought, let’s see what Omar’s doing.”</p>
-<p>Isaac’s had some time to think things through now. “This deep raspy breath, can I make out where it’s coming from? Is it like a human-sized rasp or a monster-sized rasp?”</p>
-<p>“Sounds to me like you’re trying to listen to your senses and get some information.” I’m hoping that this will remind Isaac there’s a move for this, instead of just telling him to make the move.</p>
-<p>“Oh yeah! So I’m discerning realities, staying as quiet as I can and just trying to pick up any detail on what this thing is. With my Wisdom that’s a 7, whew. What should I be on the lookout for?”</p>
-<p>I take a second to look over my notes and the map, just to make sure I give him all the information. “Well, not the goblins, actually. They pass by, closer to the light then you, intent on backstabbing your friends and not noticing you. The thing that you do see is the tip of this huge crocodile snout peak over a mound of rubble, with that rasping sound coming from it. It looks like the albino crocodile has family, and it’s big, horse-sized. If you make noise by moving rocks and getting unstuck it’ll almost certainly hear you. What are you doing about that?”</p>
-<p>Isaac ponders. “So, I can try to get out of here, defying danger most likely from the sounds of it. Or… I tear off a piece of my cloak and soak it in an entire dose of my goldenroot poison. It’s an applied poison, but if I can get this huge crocodile to swallow it before it swallows me it’ll treat me as a trusted ally, and then I can use it against the goblins.”</p>
-<p>“Okay!” That sounds like a risky plan to me, but it’s just crazy enough to work. Time to cut back to someone else. “Omar’s soaking poison into a scrap of cloak, Brianne’s got three drugged-up goblins scraping at her, Nora’s got an eye out for Omar, there are goblin sneaks in the shadows, one goblin archer by the altar, the crocodile is waking up, and Rath just took an arrow to the knee. Whew. Rath, what are you doing about that arrow?”</p>
+<h1>遊玩範例</h1>
+<p class="NoIndent">
+	我正在主持一場遊戲，我的玩家有艾薩克（扮演歐瑪爾(Omar)）、班（扮演布莉安娜(Brianne)）、艾米（扮演諾拉(Nora)）、和丹（扮演拉瑟(Rath)）。團隊們來到了一個哥布林部落，這些哥布林們正在準備進行儀式，獻祭一條罕見而珍貴的白化鱷魚（在這座城市的富人中被當作寵物）。</p>
+<p>三名哥布林戰士──吸食了致幻氣體──向著身為戰士的布莉安娜發起衝鋒，尖聲怪叫著。另外兩名則躲到掩體後，備好牠們的弓箭，並急切地向拉瑟比出手勢以抵禦他配戴的邪眼。另外一群三人小隊潛進了房間外緣的陰影之中，準備發起偷襲。哥布林大祭司和她的助手仍繼續進行著儀式，揉著鱷魚翻出的肚皮來讓牠保持順從，並拿出祭祀刀準備割開牠的喉嚨。</p>
+<p>當我描述完整個情境後，我給他們一個展開行動的機會，以確保遊戲是透過對話進行：「那麼，你們打算做什麼？」</p>
+<p>艾薩克最先展開了行動：「這個房間的外緣有足夠我躲藏的陰影嗎？」「有的。」我說：「很顯然，哥布林們並不怎麼喜歡光線。這個房間的外緣區域消失在了黑暗中，只有搖搖欲墜的牆壁和滿地碎石隱約可見。」「太好了！我要到那邊去，往那些鬼鬼祟祟的傢伙去的那邊。歐瑪爾回頭看了一眼，戴上兜帽，並遁入了陰影之中。我打算待會從這裡的陰影……照亮著儀式祭壇的火炬這邊跳出來。」</p>
+<p>我看了看地圖，然後說：「嗯，我想你顯然會需要<b>面對</b>被發現的<b>危險</b>。在我看來這應該會使用到敏捷，畢竟你需要謹慎且安靜的移動。」於是他拿起了骰子並擲骰。骰子擲出了 1 跟 2，加上他的敏捷加值為2，總共只有 5。「該死！」他抱怨道。</p>
+<p>我對於該怎麼做已經有了一些想法，但我還是對照了我的動作清單做確認。果然，我打算讓他的腳卡進碎石堆中的主意符合其中一個動作，也就是<b>讓某人陷入窘境</b>。於是我說道：「隨著你在陰影中前進，你的腳踩上了碎石堆，碎石鬆動，反過來壓住了你的腳，你動彈不得。更糟的是，這些滾動的碎石喚醒了陰影中的某個存在，你聽到了一聲深沉沙啞的呼吸聲。你會想大喊求助但暴露自己的位置，還是嘗試自己掙脫？」</p>
+<p>「呃……我不確定。」</p>
+<p>「沒關係，我們晚點再來問你。其他人，你們打算做什麼？」</p>
+<p>丹起身。「那些哥布林躲進了陰影對吧？我能看見牠們嗎？」「乍看之下無法，你想把牠們找出來嗎？」「沒，我只是想知道牠們能不能做為我睡眠術的目標。我驅動魔法之風，將其化作一道在整個房間內吹拂的沉靜夏日微風。」</p>
+<p>丹為他的<b>施放法術</b>動作擲骰以施放睡眠術。他的兩顆骰子總和為 6，加上他的+2 智力，總共為 8。他必須做出選擇。「你能夠感覺到法術從你手中釋放出去，這道魔法之風籠罩了哥布林的獻祭儀式。這個動作提供了一些選項，你打算選擇哪一個來維持這個法術？」</p>
+<p>丹思考著他的選項。「我可能會需要讓更多的傢伙陷入沉睡。布莉安娜，妳能夠在我遇到麻煩時掩護我嗎？還是我應該選擇下次-1？」</p>
+<p>「當然，我可以掩護你。」班說道。</p>
+<p>「OK，那我要選擇遭遇危險的選項。」</p>
+<p>「好極了。」我說道：「那些哥布林戰士吸食了致幻氣體對吧？藥效調諧了牠們的感官：他們能夠微微感覺到那股魔法之風，而牠們現在全都衝向了你，而不是布莉安娜。你讓多少生物陷入了睡眠呢？」</p>
+<p>丹擲骰。「看起來只有一隻，該死。」</p>
+<p>「就在哥布林們長時間的祈禱途中，大祭司因為你的魔法而倒在了地上。她的助手立刻開始搖晃她，將她叫醒。牠們都把注意力從白化鱷魚身上移開，而因為沒有人在揉摸牠的肚皮，白化鱷魚也不再滿足。不過在此同時，那些煙霧繚繞的哥布林們，牠們正氣勢洶洶的向著拉瑟而來。」</p>
+<p>班加入了進來。「我佔到拉瑟和那群瘋狂哥布林們之間，讓自己成為一個顯眼的大目標，用一聲大喊吸引哥布林們的注意。」</p>
+<p>「這聽起來像是個<b>保衛</b>動作。」我說道。</p>
+<p>「沒問題，我骰出了7，所以我獲得 1 掌握。」</p>
+<p>「很好。這三隻冒煙的哥布林朝著拉瑟猛衝過去，瘋狂地揮舞著牠們的匕首。」</p>
+<p>「不，牠們別想！」班說道：「我花費我的掌握，擋在牠們面前，並讓攻擊全部轉移到我身上。」</p>
+<p>「所以布莉安娜在最後一刻挺身介入，把拉瑟推開，改為讓哥布林撲到她身上。這看起來是 5 點傷害。諾拉，布莉安娜把這三個精神錯亂的哥布林控制在她身邊，拉瑟才剛讓女祭司陷入沉睡，鱷魚開始躁動，歐瑪爾則不見蹤影……你打算做什麼？」</p>
+<p>「首先我搭箭射向其中一名哥布林弓箭手，在我這麼做的同時，我微微點頭示意，讓坎托一頭躍進陰影之中。牠受過狩獵的訓練，我要牠尋找歐瑪爾以確保他平安無事。」</p>
+<p>在回答之前，我檢查了一下遊俠的<b>命令</b>動作，確保我明白坎托的搜尋會有什麼效果。「好吧，坎托大概很快就能自己找到歐瑪爾。如果妳跟牠一起潛進黑暗中，那妳為了找尋歐瑪爾所進行的<b>審視現狀</b>的擲骰將會得到牠給妳的加值。不過，聽起來妳打算先進行<b>瞄準射擊</b>？」</p>
+<p>「噢，哥布林弓箭手算被我偷襲嗎？我以為這只會是個<b>射擊</b>動作。」艾米答道。</p>
+<p>是時候換我做出決定了。「不，牠們把注意力完全放到了拉瑟身上，牠們馬上就要射出箭矢。我認為妳的行動符合偷襲的條件，因為牠們實在太專注了。」</p>
+<p>「太棒了！那我繼續，並射向離我最近的哥布林的手臂，我要讓牠失手落下牠的弓。這好像是+敏捷……10！牠放開了牠的弓並受到 4 點傷害。」</p>
+<p>我先確認了一下哥布林的數據，接著回答：「是的，這一箭會殺死牠。而且因為妳射穿了牠的手臂，所以牠完全沒機會射擊。然而，另一名弓箭手還是朝著拉瑟射出飛箭，造成 2 點傷害。拉瑟，布莉安娜將你推到了一旁，你本來以為自己安全了，但在那一剎那，一支箭射中了你的腿，你打算怎麼辦？……事實上，先等一下，我們來看看歐瑪爾做了什麼。」</p>
+<p>艾薩克現在已經把事情好好想清楚了。「那個深沉沙啞的呼吸聲，我可以分辨出它是從哪裡傳來的嗎？它是像人類體型會發出的刺耳聲音、還是怪物尺寸的刺耳聲音？」</p>
+<p>「聽起來你打算試著藉由仔細傾聽來獲得一些情報，是吧？」我希望這麼說能提醒艾薩克有個動作能做到這件事，而不是直接要他進行動作。</p>
+<p>「喔對！所以我要<b>審視現狀</b>，盡我可能的保持靜默，試著捕捉任何細節以搞清楚這是什麼東西。加上我的睿知修正之後的結果是 7，呼。我應該要注意些什麼呢？」</p>
+<p>我花了點時間看了看我的筆記和地圖，確保我給了他所有的情報。「嗯，事實上，那的確不是哥布林。那些哥布林牠們略過了你，來到比你更靠近光亮的地方，準備在你朋友們的背後捅一刀，但卻沒有注意到你。而你所看見的，是一隻巨型鱷魚的吻部尖端頂在碎石堆上，那刺耳的聲音就是來自於牠。看樣子那頭白化鱷魚有個塊頭特別大的家人呢，牠的體型跟馬一樣大。如果你想要搬動石頭以從中掙脫，那牠幾乎肯定會聽見你的舉動。你打算怎麼辦呢？」</p>
+<p>艾薩克沉思一會。「所以，我可以嘗試掙脫離開，但很有可能會<b>面對</b>發出聲音的<b>危險</b>。或者……我撕下斗篷的一角，並將它浸泡在我一整劑的黃金根毒藥裡。這是種需要服用後才能生效的毒藥，但如果我能在這頭巨大鱷魚吞下我之前，讓牠吞下這片布料，牠就會把我當成是一名可信賴的盟友，然後我就能利用牠去對付那些哥布林。」</p>
+<p>「沒問題！」這聽起來是個高風險的計畫，但並沒有瘋狂到無法執行。然而也是時候切換到其他人的場景了。「所以，歐瑪爾將斗篷的碎片浸泡在毒藥中，布莉安娜正被三隻吸嗨了的哥布林砍抓，諾拉留神注意著歐瑪爾的情況，有幾隻哥布林們潛匿在陰影中，一隻哥布林弓箭手站在祭壇旁，白化鱷魚醒轉起身，而拉瑟的膝蓋剛中了一箭。呼，拉瑟，你打算為這支箭做些什麼？」</p>
 
           </div>
        </div>
@@ -176,6 +177,8 @@
           if(current.context.className=="MonsterName" || current.context.className=="SpellName"){
             link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
           }
+
+          link_text = link_text.replace(/\(.*\)/, "");
 
           if(tag=="H2" || tag=="H3"){
             link_text = " - "+link_text;
