--- a/moves/index.html
+++ b/moves/index.html
@@ -109,9 +109,7 @@
     <div class="container">
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
-             
-
-<h1>基本動作</h1>
+             <h1>基本動作</h1>
 <div class="Move"><h2 class="BasicMoveName">砍劈(Hack and Slash)</h2>
 <p class="NoIndent">
 	當你<strong>以近戰肉搏攻擊敵人</strong>時，擲+力量。<br/>
@@ -189,48 +187,68 @@
 <hr/>
 
 <h1>特殊動作</h1>
-<div class="Move"><h2 class="BasicMoveName">Last Breath</h2>
-<p class="NoIndent">When <strong>you’re dying</strong> you catch a glimpse of what lies beyond the Black Gates of Death’s Kingdom (the GM will describe it). Then roll (just roll, +nothing—yeah, Death doesn’t care how tough or cool you are). On a 10+ you’ve cheated death—you’re in a bad spot but you’re still alive. On a 7–9 Death will offer you a bargain. Take it and stabilize or refuse and pass beyond the Black Gates into whatever fate awaits you. On a miss, your fate is sealed. You’re marked as Death’s own and you’ll cross the threshold soon. The GM will tell you when.</p></div>
-<div class="Move"><h2 class="BasicMoveName">Encumbrance</h2>
-<p class="NoIndent">When you <strong>make a move while carrying weight</strong> up to or equal to load, you’re fine. When you make a move while carrying weight equal to load+1 or load+2, you take -1. When you make a move while carrying weight greater than load+2, you have a choice: drop at least 1 weight and roll at -1, or automatically fail.</p></div>
-<div class="Move"><h2 class="BasicMoveName">Make Camp</h2>
-<p class="NoIndent">When you <strong>settle in to rest</strong> consume a ration. If you’re somewhere dangerous decide the watch order as well. If you have enough XP you may Level Up. When you wake from at least a few uninterrupted hours of sleep heal damage equal to half your max HP.</p></div>
-<div class="Move"><h2 class="BasicMoveName">Take Watch</h2>
+<div class="Move"><h2 class="BasicMoveName">臨死一息 (Last Breath)</h2>
+<p class="NoIndent">
+	當你<strong>瀕臨死亡</strong>時，你瞥見了死國黑門後頭的景象（GM將會描述它的樣子）。接著擲骰（單純擲骰，什麼都不加－－是的，死神才不在乎你有多強壯或多厲害）。<br/>
+	✴擲出10+時，你死裡逃生－－你的處境仍然糟糕，但你仍然活著。<br/>
+	✴擲出7-9時，死神對你提出一項交易。你要嘛接受並活下來，要嘛拒絕並穿過黑門，迎接你等候已久的命運。<br/>
+	✴擲出6-時，你的命運已經注定。你將成為死神的財產，並很快地離開人世。GM將告訴你那一刻何時來到。</p></div>
+
+<div class="Move"><h2 class="BasicMoveName">負重 (Encumbrance)</h2>
+<p class="NoIndent">
+	當你<strong>進行某個動作時身上攜帶的重量</strong>低於或等於負載上限時，你不會有事。
+	當你進行某個動作時身上攜帶的重量等於負載上限+1或負載上限+2，你的擲骰獲得-1。
+	當你進行某個動作時身上攜帶的重量超過負載上限+2，你必須做出選擇：你必須捨棄至少1 重量的物品並在獲得擲骰-1，或者，你的擲骰自動失敗。</p></div>
+
+<div class="Move"><h2 class="BasicMoveName">紮營 (Make Camp)</h2>
+<p class="NoIndent">
+	當你<strong>安頓下來休息</strong>時，消耗一份口糧。如果你們正處於某個危險的場所，那麼也請決定守夜的順序。如果你有足夠的經驗值，也可以在這時候升級。當你經歷了好幾個小時不被打擾的睡眠後並悠悠醒轉，恢復等同你最大生命值一半的傷害。</p></div>
+
+<div class="Move"><h2 class="BasicMoveName">守夜 (Take Watch)</h2>
 <p class="NoIndent">When <strong>you’re on watch and something approaches the camp</strong> roll+Wis. On a 10+ you’re able to wake the camp and prepare a response, the camp takes +1 forward. On a 7–9 you react just a moment too late; the camp is awake but hasn’t had time to prepare. You have weapons and armor but little else. On a miss whatever lurks outside the campfire’s light has the drop on you.</p></div>
-<div class="Move"><h2 class="BasicMoveName">Undertake a Perilous Journey</h2>
+
+<div class="Move"><h2 class="BasicMoveName">踏上危險旅途 (Undertake a Perilous Journey)</h2>
 <p class="NoIndent">When you <strong>travel through hostile territory</strong>, choose one member of the party to act as trailblazer, one to scout ahead, and one to be quartermaster (the same character cannot have two jobs). If you don’t have enough party members or choose not to assign a job, treat that job as if it had rolled a 6. Each character with a job to do rolls+Wis. On a 10+ the quartermaster reduces the number of rations required by one. On a 10+ the trailblazer reduces the amount of time it takes to reach your destination (the GM will say by how much). On a 10+ the scout will spot any trouble quick enough to let you get the drop on it. On a 7–9 each roles performs their job as expected: the normal number of rations are consumed, the journey takes about as long as expected, no one gets the drop on you but you don’t get the drop on them either.</p></div>
-<div class="Move"><h2 class="BasicMoveName">Level Up</h2>
+
+<div class="Move"><h2 class="BasicMoveName">升級 (Level Up)</h2>
 <p class="NoIndent">When you <strong>have downtime (hours or days) and XP equal to (or greater than) your current level + 7</strong>, subtract your current level +7 from your XP, increase your level by 1, and choose a new advanced move from your class. If you are the wizard, you also get to add a new spell to your spellbook.</p>
 <p>Choose one of your stats and increase it by 1 (this may change your modifier). Changing your Constitution increases your maximum and current HP. Ability scores can’t go higher than 18.</p></div>
-<div class="Move"><h2 class="BasicMoveName">End of Session</h2>
+
+<div class="Move"><h2 class="BasicMoveName">聚會結束 (End of Session)</h2>
 <p class="NoIndent">When you <strong>reach the end of a session</strong>, choose one your bonds that you feel is resolved (completely explored, no longer relevant, or otherwise). Ask the player of the character you have the bond with if they agree. If they do, mark XP and write a new bond with whomever you wish.</p>
 <p>Once bonds have been updated look at your alignment. If you fulfilled that alignment at least once this session, mark XP. Then answer these three questions as a group:</p>
 <ul><li>Did we learn something new and important about the world?</li>
 <li>Did we overcome a notable monster or enemy?</li>
 <li>Did we loot a memorable treasure?</li></ul>
 <p>For each “yes” answer everyone marks XP.</p></div>
-<div class="Move"><h2 class="BasicMoveName">Carouse</h2>
+
+<div class="Move"><h2 class="BasicMoveName">歡宴暢飲 (Carouse)</h2>
 <p class="NoIndent">When you <strong>return triumphant and throw a big party</strong>, spend 100 coin and roll + extra 100s of coin spent. On a 10+ choose 3. On a 7–9 choose 1. On a miss, you still choose one, but things get really out of hand.</p>
 <ul><li>You befriend a useful NPC</li>
 <li>You hear rumors of an opportunity</li>
 <li>You gain useful information</li>
 <li>You are not entangled, ensorcelled, or tricked</li></ul></div>
-<div class="Move"><h2 class="BasicMoveName">Supply</h2>
+
+<div class="Move"><h2 class="BasicMoveName">補給 (Supply)</h2>
 <p class="NoIndent">When you <strong>go to buy something with gold on hand</strong>, if it’s something readily available in the settlement you’re in, you can buy it at market price. If it’s something special, beyond what’s usually available here, or non-mundane, roll+Cha. On a 10+ you find what you’re looking for at a fair price. On a 7–9 you’ll have to pay more or settle for something similar.</p></div>
-<div class="Move"><h2 class="BasicMoveName">Recover</h2>
+
+<div class="Move"><h2 class="BasicMoveName">恢復 (Recover)</h2>
 <p class="NoIndent">When you <strong>do nothing but rest in comfort and safety</strong> after a day of rest you recover all your HP. After three days of rest you remove one debility of your choice. If you’re under the care of a healer (magical or otherwise) you heal a debility for every two days of rest instead.</p></div>
-<div class="Move"><h2 class="BasicMoveName">Recruit</h2>
+
+<div class="Move"><h2 class="BasicMoveName">招募 (Recruit)</h2>
 <p class="NoIndent">When you <strong>put out word that you’re looking to hire help</strong>, roll. If you make it known…</p>
 <ul><li>…that your pay is generous, take +1</li>
 <li>…what you’re setting out to do, take +1</li>
 <li>…that they’ll get a share of whatever you find, take +1</li></ul>
 <p class="NoIndent">If you have a useful reputation around these parts take an additional +1. On a 10+ you’ve got your pick of a number of skilled applicants, your choice who you hire, no penalty for not taking them along. On a 7–9 you’ll have to settle for someone close or turn them away. On a miss someone influential and ill-suited declares they’d like to come along (a foolhardy youth, a loose-cannon, or a veiled enemy, for example), bring them and take the consequences or turn them away. If you turn away applicants you take -1 forward to Recruit.</p></div>
-<div class="Move"><h2 class="BasicMoveName">Outstanding Warrants</h2>
+
+<div class="Move"><h2 class="BasicMoveName">懸賞令 (Outstanding Warrants)</h2>
 <p class="NoIndent">When you <strong>return to a civilized place in which you’ve caused trouble before</strong>, roll+Cha. On a hit, word has spread of your deeds and everyone recognizes you. On a 7–9, that, and, the GM chooses a complication:</p>
 <ul><li>The local constabulary has a warrant out for your arrest</li>
 <li>Someone has put a price on your head</li>
 <li>Someone important to you has been put in a bad spot as a result of your actions</li></ul></div>
-<div class="Move"><h2 class="BasicMoveName">Bolster</h2>
+
+<div class="Move"><h2 class="BasicMoveName">未雨綢繆 (Bolster)</h2>
 <p class="NoIndent">When you <strong>spend your leisure time in study, meditation, or hard practice,</strong> you gain preparation. If you prepare for a week or two, 1 preparation. If you prepare for a month or longer, 3 preparation. When your preparation pays off spend 1 preparation for +1 to any roll. You can only spend one preparation per roll.</p></div>
 
           </div>
@@ -263,6 +281,8 @@
           if(current.context.className=="MonsterName" || current.context.className=="SpellName"){
             link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
           }
+
+          link_text = link_text.replace(/\(.*\)/, "");
 
           if(tag=="H2" || tag=="H3"){
             link_text = " - "+link_text;
